# nxp-appcodehub

./: .gitignore
dm-wolfmqtt-publisher-client-with-zephyr/: README.md
dm-wolfssh-rgb-server-with-zephyr/: README.md
dm-wolfssl-tls-hello-server-pqc-with-zephyr/: README.md  build-client.sh  run-client.sh
dm-wolfssl-tls-hello-server-with-zephyr/: README.md  build-wolfssl.sh
dm-wolftpm-wolfssl-tls-with-zephyr/: CMakeLists.txt  LICENSE.txt  README.md  dm-wolfssl-tls-hello-server-with-zephyr.xml  prj.conf  sample.yaml  setup_sdcard.sh  west.yml
dm-wolftpm-wolfssl-tls-with-zephyr/deviceTreeOverlays/: mikroBUS.overlay
dm-wolftpm-wolfssl-tls-with-zephyr/src/: main.c  mikroBUS.c  pmodInit.c  user_settings.h  user_settings_2.h
